welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: ';' expected but 'true' found.
  if ( ((a>=10) && (a<=20)) || ((b>=10) && (b<=20)) ) {reutrn true} else {return false}
                                                              ^